feat(backend): resolve task 4 [backend-high] - Deploy AWS DynamoDB - Add Delete and Update Lambda endpoints - Enrich DynamoDB table
